# AI-driven-NFT-MarketPlace

./: .gitignore  README.md  deploy.sh  docker-compose.yml
backend/: .dockerignore  Dockerfile  db.js  index.js  package-lock.json  package.json  verify.js
contracts/astranode-nft/: Cargo.toml
contracts/astranode-nft/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/evm/contracts/: AstraNodeNFT.sol
contracts/evm/scripts/: deploy.js
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/collection/: page.tsx
frontend/src/app/nft/[id]/: page.tsx
frontend/src/components/: CreationLab.tsx  Marketplace.tsx  MyCollection.tsx  Navbar.tsx
frontend/src/constants/: abi.ts  config.ts
frontend/src/hooks/: useCosmos.ts  useEVM.ts
